--- a/scss/sphinxcon/_layout.scss
+++ b/scss/sphinxcon/_layout.scss
@@ -32,7 +32,7 @@ footer.footer {
 .featured,
 .sidebar,
 .main-content-wrapper {
-  margin-bottom: $grid-gutter-width/2;
+  margin-bottom: $grid-gutter-width;
 }
 
 //== Vertical padding inside sections
